force-app/main/default/objects/Sap_Cpi_Credentials__mdt/Sap_Cpi_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>Sap Cpi Credentials</label>
    <pluralLabel>255</pluralLabel>
</CustomObject>