force-app/main/default/objects/Sap_Cpi_Credentials__mdt/fields/Sap_Cpi_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Sap_Cpi_Client_Id__c</fullName>
    <label>Sap Cpi Client Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>