force-app/main/default/objects/Sap_Cpi_Credentials__mdt/fields/Sap_Cpi_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Sap_Cpi_Client_Secret__c</fullName>
    <label>Sap Cpi Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>