force-app/main/default/objects/Sap_Cpi_Credentials__mdt/fields/Sap_Cpi_Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Sap_Cpi_Grant_Type__c</fullName>
    <label>Sap Cpi Grant Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>